api/crates/postgres/tests/integration/tags/snapshots/integration__tags__attach_by_id____test_context_wrapped_self_fails.snap
---
source: crates/postgres/tests/integration/tags/attach_by_id.rs
expression: ctx.queries()
---
queries = []
